--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body>
    <h1>Main page</h1>
    <p>Some text</p>
+   <p>Additional paragraph 1</p>
+   <p>Additional paragraph 2</p>
+   <p>Additional paragraph 3</p>
 </body>
 </html>
